# eo-grow

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: help-support.md
.github/workflows/: ci_action.yml  ci_trigger.yml  scheduler_caller.yml
docs/: Makefile
docs/source/: common-configuration-patterns.md  common-design-patterns.md  conf.py  config-language.md  config-language.rst  eogrow.core.area.base.rst  eogrow.core.area.batch.rst  eogrow.core.area.custom_grid.rst  eogrow.core.area.rst  eogrow.core.area.utm.rst  eogrow.core.base.rst  eogrow.core.config.rst  eogrow.core.eopatch.rst  eogrow.core.logging.rst  eogrow.core.pipeline.rst  eogrow.core.rst  eogrow.core.schemas.rst  eogrow.core.storage.rst  eogrow.pipelines.batch_to_eopatch.rst  eogrow.pipelines.download.rst  eogrow.pipelines.download_batch.rst  eogrow.pipelines.export_maps.rst  eogrow.pipelines.features.rst  eogrow.pipelines.mapping.rst  eogrow.pipelines.merge_samples.rst  eogrow.pipelines.prediction.rst  eogrow.pipelines.rasterize.rst  eogrow.pipelines.rst  eogrow.pipelines.sampling.rst  eogrow.pipelines.testing.rst  eogrow.pipelines.training.rst  eogrow.rst  eogrow.tasks.batch_to_eopatch.rst  eogrow.tasks.common.rst  eogrow.tasks.features.rst  eogrow.tasks.prediction.rst  eogrow.tasks.rst  eogrow.utils.batch.rst  eogrow.utils.enum.rst  eogrow.utils.export.rst  (+17 more)
docs/source/_templates/: layout.html
docs/source/figures/: eo-grow.drawio
documentation/: basic-tutorial.ipynb  config-language.md
documentation/workshop/: bohinj-aoi.geojson  workshop.ipynb
documentation/workshop/configs/: download.json  download_basic.json  (+1 more)
eogrow/: __init__.py  cli.py  types.py
eogrow/core/: __init__.py  base.py  config.py  eopatch.py  logging.py  pipeline.py  pipeline_chain.py  pipeline_idea.py  schemas.py  storage.py
eogrow/pipelines/: __init__.py  batch_to_eopatch.py  byoc.py  download.py  download_batch.py  export_maps.py  features.py  import_tiff.py  import_vector.py  ingest_byoc.py  mapping.py  merge_samples.py  prediction.py  rasterize.py  sampling.py  split_grid.py  switch_grids.py  testing.py  training.py  zipmap.py
eogrow/tasks/: __init__.py  batch_to_eopatch.py  common.py  features.py  import_vector.py  prediction.py  spatial.py  testing.py
eogrow/utils/: __init__.py  batch.py  enum.py  eopatch_list.py  export.py  filter.py  fs.py  general.py  grid.py  logging.py  map.py  meta.py  parallelize.py  pipeline_chain.py  ray.py  testing.py  time.py  types.py  validators.py  vector.py  zipmap.py
examples/: basic-tutorial.ipynb  lets-build-a-model.ipynb
examples/workshop/: bohinj-aoi.geojson  cluster.yaml  workshop.ipynb
tests/: conftest.py  test_cli.py  test_configs.py
tests/core/: test_config.py  test_logging.py  test_pipeline.py  test_storage.py
tests/pipelines/: test_batch_download.py  test_batch_to_eopatch.py  test_byoc.py  test_download.py  test_features.py  test_import_tiff.py  test_import_vector.py  test_merge_samples.py  test_prediction.py  test_rasterize.py  test_sampling.py  test_split_grid.py  test_testing.py  test_training.py  test_zipmap.py
tests/tasks/: test_common.py  test_features.py  test_testing.py
tests/test_config_files/: aws_storage_test.json  batch_to_eopatch.json  chain_pipeline.json  chain_pipeline_to_validate.json  download_custom.json  download_custom_raise.json  download_dem.json  download_l1c_q1.json  download_l1c_q1_dn.json  download_l1c_q1_dn_rescaled.json  download_l1c_yearly.json  download_l2a.json  download_q3.json  download_season.json  eopatch_global_config_filtered.json  export_maps_data_config.json  export_maps_mask_config.json  features_config_dtype.json  features_config_interpolation.json  features_config_mosaicking.json  features_config_mosaicking_custom.json  features_on_rescaled_dn.json  features_on_sampled_data.json  global_config.json  large_area_global_config.json  lgbm_training_config_label_filter.json  lgbm_training_config_no_filter.json  local_storage_test.json  mapping_config_pred.json  mapping_config_ref.json  merge_features_samples_config.json  merge_reference_samples_config.json  prediction_chain_config.json  prediction_config.json  prediction_dtype_config.json  prediction_with_encoder_config.json  rasterize_pipeline_config.json  rasterize_pipeline_features.json  rasterize_pipeline_features_eroded.json  rasterize_pipeline_float.json  (+7 more)
tests/test_core/: test_config.py  test_eopatch.py  test_logging.py  test_pipeline.py  test_schemas.py  test_storage.py
tests/test_pipelines/: test_batch_to_eopatch.py  test_byoc.py  test_download.py  test_export_maps.py  test_features.py  test_import_tiff.py  test_import_vector.py  test_mapping.py  test_merge_samples.py  test_prediction.py  test_rasterize.py  test_sampling.py  test_split_grid.py  test_switch_grids.py  test_testing.py  test_training.py  test_zipmap.py
tests/test_stats/: download_custom_stats.json  download_dem.json  download_l1c_q1_dn_rescaled_stats.json  download_l1c_yearly_stats.json  download_q3_stats.json  download_stats_l2a.json  export_maps_stats_data.json  features_on_rescaled_dn.json  features_stats_dtype.json  features_stats_interpolation.json  mapping_stats_pred.json  mapping_stats_ref.json  prediction_with_encoder_stats.json  rasterize_maps_stats.json  rasterize_pipeline_features_eroded.json  rasterize_pipeline_float.json  rasterize_pipeline_single_value.json  rasterize_stats.json  sampling_block_number_stats.json  sampling_blocks_number_stats.json  sampling_stats.json
tests/test_tasks/: test_features.py  test_spatial.py  test_testing.py
tests/test_utils/: test_enum.py  test_eopatch_list.py  test_filter.py  test_fs.py  test_general.py  test_grid.py  test_map.py  test_meta.py  test_ray.py  test_validators.py  test_zipmap.py
tests/utils/: test_filter.py  test_fs.py  test_general.py  test_grid.py  test_map.py  test_meta.py  test_pipeline_chain.py  test_ray.py  test_validators.py
(+186 files in other folders)
